<resources>
    <string name="app_name">Shoes lovers</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="msg_fill_all_fields">Fill all fields to login</string>
    <string name="msg_fill_all_fields_register">Fill all fields to register</string>
    <string name="msg_fill_name">Enter the name of Shoes</string>
    <string name="msg_fill_image">Insert Shoes Image</string>
    <string name="msg_fill_price">Enter the price of Shoes</string>
    <string name="msg_fill_description">Enter the description of Shoes</string>
    <string name="msg_fake_image_added">Fake image of Shoes added</string>
    <string name="msg_shoes_added_success">Shoes added successfully</string>
    <string name="msg_shoes_updated_success">Shoes updated successfully</string>
    <string name="msg_user_added_success">User registered successfully</string>
    <string name="msg_cancel_operation">Are you sure you want to cancel?</string>
    <string name="user_password">Password</string>
    <string name="user_email">Email</string>
    <string name="user_login">Login</string>
    <string name="create_an_account">create an account</string>
    <string name="shoes_description">Shoes Description</string>
    <string name="shoes_name">Shoes Name</string>
    <string name="shoes_price">Price</string>
    <string name="user_name">Name</string>
    <string name="register_user">Register User</string>
    <string name="save_shoes">Save Shoes</string>
    <string name="logout">logout</string>

    <string name="large_text">
        THE HISTORY AND EVOLUTION OF SHOES
        It’s hard to imagine what life was like when shoes weren’t discovered yet.
        Everything started because of a real and practical need to protect the feet from outside effects.
        This seemingly simple human need turned into a quickly growing industry in which design was just as important
        as functionality. Although the main qualities of footwear have remained unchanged, looking back at the long
        and interesting history of shoes, you can see that the colors, materials and designs did change.
        Before, shoes used to be made by craftsmen. But today, they are part of a factory industry earning
        huge amounts of money each year.
        The history, changes and tendencies in footwear fashion can be divided into the main world history
        During different eras there were different views of the world, different understandings of culture and art, different economic and political factors which played an important role in the materials, shapes, pronts, and style used in people’s wardrobe. The discovery and capture of new lands, new technologies and different understandings of the world changed the style and fashion of footwear.
        Primitive footwear, popular during Prehistory, was changed by sandals which grew in popularity during Antiquity because of the formation of social classes. During the Middle Ages, which are characterized by humility and feudalism, the first footwear structures were formed and the heel was discovered and widely used. During the Early Modern Times were the eras of Renaissance and Baroque during which hints of modern footwear can be spotted. During this time, men’s and women’s shoes were very similar. The models of shoes varied depending on social classes. Also, during the Middle Ages when feudalism was present, society was divided into classes deciding not only different jobs and responsibilities but also different clothes and footwear. Peasants and non-noble townspeople wore heavy and dark leather boots with a heel. Meanwhile, the noble wore more fancy footwear which often had a wooden heel.  Prints, ornaments and other decorative elements were worn only by the noble. They would order these shoes from a shoemaker. Every shoe was different and decorated according to the mood and wishes of the customer, so every single pair of shoes was unique and different. The Modern Times changed the understanding of fashion and drastically altered the decades-long shoemaking traditions. This happened because of new opportunities in technology which made the whole shoemaking process much more easy and simple.
        WHEN DID THE FIRST SHOES APPEAR?
        1991 is an important date in the history of footwear because this is the year when, at the border of Austria and Italy, archeologists found a naturally mummified human named Oetzi from the Stone Age who died about 3300 years before our era. This Alpine traveler was wearing shoes made from deerskin with a sole made from bearskin and stuffed with hay. This is how it’s thought that the Stone Age footwear production technique was like: the fewer stitches, the dryer and warmer the legs, therefore, they wrinkled the leather. The stitches were small and they were not very reliable given the tools people had at that time.
    </string>
    <string name="helper_shoes_name">type here shoes name</string>
    <string name="helper_shoes_description">type here shoes description</string>

    <string name="msg_permission_success">Permissions Granted</string>
    <string name="msg_permission_error">Permissions Refused</string>
    <string name="size_help_price_text">price sample: $99.00</string>
    <string name="size_price_sample">$89.00</string>
    <string name="edit">edit</string>
    <string name="select_action">"Select Action"</string>
    <string name="select_photo_from_gallery">Select photo from gallery</string>
    <string name="capture_photo_from_camera">Capture photo from camera</string>
</resources>