<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerStarter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreen1"
    app:layoutDescription="@xml/fragment_constraintlayout_scene"
    app:motionDebug="NO_DEBUG">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="@dimen/img_width_height"
        android:layout_height="@dimen/img_width_height"
        android:layout_marginStart="@dimen/size_base_medium_value"
        android:layout_marginTop="@dimen/size_margin_image_list"
        android:layout_marginEnd="@dimen/size_base_medium_value"
        android:contentDescription="@string/app_name"
        android:src="@drawable/intro001"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStarterTitle"
        style="@style/TitleTextStyle"
        android:layout_width="@dimen/size_base_no_value"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_base_xlarge_value"
        android:layout_marginTop="@dimen/size_base_xxlarge_value"
        android:layout_marginEnd="@dimen/size_base_xlarge_value"
        android:text="@string/shoes_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

    <TextView
        android:id="@+id/tvStarter"
        style="@style/BodyTextStyle"
        android:layout_width="@dimen/size_base_no_value"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_base_large_value"
        android:layout_marginTop="@dimen/desc_padding"
        android:layout_marginEnd="@dimen/size_base_large_value"
        android:paddingLeft="@dimen/desc_padding"
        android:paddingRight="@dimen/desc_padding"
        android:text="@string/shoes_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStarterTitle" />

</androidx.constraintlayout.motion.widget.MotionLayout>