<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addShoesViewModel"
            type="theshoestore.ca.viewmodel.AddShoesViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLayout"
        android:fillViewport="true"
        android:orientation="vertical"
        tools:context=".ui.fragment.AddShoesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTitle"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="16dp"
                android:hint="@string/shoes_name"
                android:importantForAutofill="yes"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivSample"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etPrice"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/shoes_price"
                android:importantForAutofill="yes"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTitle"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etDescription"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/shoes_description"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/etPrice"
                app:layout_constraintStart_toStartOf="@+id/etPrice"
                app:layout_constraintTop_toBottomOf="@+id/etPrice"
                tools:ignore="Autofill" />



            <Button
                android:id="@+id/btRegister"
                style="@style/ButtonTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:padding="15dp"
                android:text="@string/save_shoes"
                app:layout_constraintEnd_toEndOf="@+id/etDescription"
                app:layout_constraintStart_toStartOf="@+id/etDescription"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" />

            <ImageView
                android:id="@+id/ivSample"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="60dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/shoes_sample" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.40" />

            <View
                android:id="@+id/viewAdd"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_background_add_picture"
                app:layout_constraintBottom_toBottomOf="@+id/ivSample"
                app:layout_constraintEnd_toEndOf="@+id/ivSample"
                app:layout_constraintStart_toEndOf="@+id/ivSample" />

            <ImageView
                android:id="@+id/ivAddPicture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="@+id/viewAdd"
                app:layout_constraintEnd_toEndOf="@+id/viewAdd"
                app:layout_constraintStart_toStartOf="@+id/viewAdd"
                app:layout_constraintTop_toTopOf="@+id/viewAdd" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>