<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="theshoestore.ca.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLayout"
        tools:context=".ui.fragment.LoginFragment">

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditTextStyle"
            android:layout_width="@dimen/size_base_no_value"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_base_medium_value"
            android:layout_marginRight="@dimen/size_base_medium_value"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tvEmailLabel"
            style="@style/LabelTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_base_medium_value"
            android:text="@string/user_email"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toTopOf="@+id/etEmail" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextStyle"
            android:layout_width="@dimen/size_base_no_value"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_base_medium_value"
            android:layout_marginTop="@dimen/size_base_medium_value"
            android:layout_marginEnd="@dimen/size_base_medium_value"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tvPasswordLabel"
            style="@style/LabelTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_base_medium_value"
            android:text="@string/user_password"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toTopOf="@+id/etPassword" />

        <Button
            android:id="@+id/btLogin"
            style="@style/ButtonTextStyle"
            android:layout_width="@dimen/size_base_no_value"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_base_medium_value"
            android:layout_marginTop="@dimen/size_base_medium_value"
            android:layout_marginEnd="@dimen/size_base_medium_value"
            android:padding="@dimen/size_base_medium_value"
            android:text="@string/user_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <TextView
            android:id="@+id/tvRegister"
            style="@style/BodyTextStyle"
            android:layout_width="@dimen/size_base_no_value"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_base_medium_value"
            android:layout_marginTop="@dimen/size_register_text"
            android:layout_marginEnd="@dimen/size_base_medium_value"
            android:text="@string/create_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLogin" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/size_image_login"
            android:layout_height="@dimen/size_image_login"
            android:layout_marginStart="@dimen/size_margin_image_login"
            android:layout_marginTop="@dimen/size_base_xlarge_value"
            android:layout_marginEnd="@dimen/size_margin_image_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>