<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailViewModel"
            type="theshoestore.ca.viewmodel.DetailViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLayout"
        android:fillViewport="true"
        tools:context=".ui.fragment.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/barTop"
                android:layout_width="@dimen/size_base_no_value"
                android:layout_height="?actionBarSize"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/size_icon_back"
                android:layout_height="@dimen/size_icon_back"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/barTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barTop"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/ivSave"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_background_done_button"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:padding="@dimen/size_base_half_small_value"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@+id/ivBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivBack"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_container"
                android:layout_marginStart="@dimen/size_base_small_value"
                android:layout_marginTop="@dimen/size_margin_container"
                android:layout_marginEnd="@dimen/size_base_small_value"
                android:background="@drawable/container_bg"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="@+id/btRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivPicture" />

            <ImageView
                android:id="@+id/containerBarra"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_container_barra"
                android:layout_marginStart="@dimen/size_base_large_value"
                android:layout_marginEnd="@dimen/size_base_large_value"
                android:background="@null"
                android:contentDescription="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilDescription" />

            <ImageView
                android:id="@+id/ivPicture"
                android:layout_width="@dimen/size_image_width"
                android:layout_height="@dimen/size_image_height"
                android:layout_marginStart="@dimen/size_base_medium_value"
                android:layout_marginTop="@dimen/size_base_medium_value"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="@+id/container"
                app:layout_constraintTop_toBottomOf="@+id/barTop"
                tools:src="@drawable/shoe01" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/BoxTextInputLayoutStyleBorderBlack"
                android:layout_width="@dimen/size_base_no_value"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_base_medium_value"
                android:layout_marginTop="@dimen/size_base_small_value"
                android:layout_marginEnd="@dimen/size_base_medium_value"
                android:hint="@string/shoes_name"
                app:layout_constraintEnd_toEndOf="@+id/container"
                app:layout_constraintStart_toStartOf="@+id/container"
                app:layout_constraintTop_toBottomOf="@+id/ivPicture">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietName"
                    style="@style/EditTextStyleNoBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textSize="@dimen/size_input_text"
                    android:enabled="@{detailViewModel.isEditing()}"
                    android:text="@{detailViewModel.shoes.title}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/BoxTextInputLayoutStyleBorderBlack"
                android:layout_width="@dimen/size_base_no_value"
                android:layout_height="@dimen/size_input_description_container"
                android:layout_marginStart="@dimen/size_base_medium_value"
                android:layout_marginTop="@dimen/size_base_medium_value"
                android:layout_marginEnd="@dimen/size_base_medium_value"
                android:hint="@string/shoes_description"
                app:layout_constraintEnd_toEndOf="@+id/container"
                app:layout_constraintStart_toStartOf="@+id/container"
                app:layout_constraintTop_toBottomOf="@+id/tilName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDescription"
                    style="@style/EditTextStyleNoBackground"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_input_description"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:maxLength="350"
                    android:maxLines="9"
                    android:inputType="textMultiLine"
                    android:enabled="@{detailViewModel.isEditing()}"
                    android:text="@{detailViewModel.shoes.description}"
                    tools:text="@string/large_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPrice"
                style="@style/BoxTextInputLayoutStyle"
                android:layout_width="@dimen/size_base_no_value"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_base_small_value"
                android:layout_marginTop="@dimen/size_base_large_value"
                android:layout_marginEnd="@dimen/size_base_xlarge_value"
                android:hint="@string/shoes_price"
                app:helperTextEnabled="true"
                app:helperText="@string/size_help_price_text"
                app:helperTextTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivPicture"
                app:layout_constraintTop_toTopOf="@+id/ivPicture">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPrice"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="15"
                    android:enabled="@{detailViewModel.isEditing()}"
                    android:text="@{detailViewModel.shoes.price}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/size_input_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ivMoney"
                android:layout_width="@dimen/size_icon_money"
                android:layout_height="@dimen/size_icon_money"
                android:layout_marginEnd="@dimen/size_base_medium_value"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toTopOf="@+id/tilPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tilPrice"
                app:srcCompat="@drawable/ic_money" />

            <Button
                android:id="@+id/btRegister"
                style="@style/ButtonTextStyle"
                android:layout_width="@dimen/size_base_no_value"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_base_medium_value"
                android:layout_marginTop="@dimen/size_base_small_value"
                android:layout_marginEnd="@dimen/size_base_medium_value"
                android:padding="@dimen/size_base_medium_value"
                android:text="@string/save_shoes"
                android:enabled="@{detailViewModel.isEditing()}"
                app:layout_constraintEnd_toEndOf="@+id/container"
                app:layout_constraintStart_toStartOf="@+id/container"
                app:layout_constraintTop_toBottomOf="@+id/containerBarra" />

            <View
                android:id="@+id/viewAdd"
                android:layout_width="@dimen/size_view_add"
                android:layout_height="@dimen/size_view_add"
                android:visibility="gone"
                android:background="@drawable/shape_background_add_picture"
                app:layout_constraintBottom_toBottomOf="@+id/ivPicture"
                app:layout_constraintEnd_toEndOf="@+id/ivPicture"
                app:layout_constraintStart_toEndOf="@+id/ivPicture" />

            <ImageView
                android:id="@+id/ivAddPicture"
                android:layout_width="@dimen/size_icon_add"
                android:layout_height="@dimen/size_icon_add"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/size_base_half_small_value"
                android:src="@drawable/ic_camera"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/viewAdd"
                app:layout_constraintEnd_toEndOf="@+id/viewAdd"
                app:layout_constraintStart_toStartOf="@+id/viewAdd"
                app:layout_constraintTop_toTopOf="@+id/viewAdd" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.40" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>